# gpu-video-average

./: CMakeLists.txt  Portfile  README.md  cpu.cc  gpu.cc  opencv.diff
